<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_height="match_parent"
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:background="@color/mainActivitybackground">
    <TextView
              android:id="@+id/textview"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              style="@style/HelloWorldTextView"/>
     <EditText
               android:id="@+id/edittext"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>
    <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Buttontext"
    />
    <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttontext02"
    />
    <TextView
            android:text="@string/notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <Button
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal"
            android:text="@string/Facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
    />
    <Button
            android:id="@+id/button4"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Google"/>

</LinearLayout>